fixed: analog scale widget layout messed up in Grid Theme on IE11,
https://github.com/OpenClinica/enketo-express-oc/issues/242

--- a/src/widget/analog-scale/analog-scalepicker.scss
+++ b/src/widget/analog-scale/analog-scalepicker.scss
@@ -143,7 +143,7 @@ $q-pad-right: 0px !default;
         }
 
         .range-widget {
-            flex: 1;
+            flex: 100%;
 
             // adjust default range widget 
             &__wrap {
@@ -179,12 +179,12 @@ $q-pad-right: 0px !default;
     &.or-appearance-vertical:not(.disabled) {
         @include display-flex;
 
-        @include flex(1);
+        @include flex(100%);
 
         @include flex-direction(row);
 
         .label-content {
-            @include flex(1);
+            @include flex(100%);
         }
 
         .analog-scale-widget {
